k8s/ln-home/zigbee2mqtt/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zigbee2mqtt
spec:
  selector:
    matchLabels:
      app: zigbee2mqtt
  replicas: 1
  serviceName: "zigbee2mqtt"
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      nodeSelector:
        k8s.partyparrot.moe/hardware_zigbee: "true"
      containers:
        - name: z2m
          image: ghcr.io/koenkk/zigbee2mqtt:1.21.0
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "500m"
            limits:
              memory: "200Mi"
              cpu: "1"
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: data
            mountPath: /app/data
          - name: config
            mountPath: /app/data/configuration.yaml
            readOnly: true
            subPath: configuration.yaml
          - name: usb-zigbee
            mountPath: /dev/ttyUSB0
          # livenessProbe:
          #   httpGet:
          #    path: /
          #    port: 8080
          #  initialDelaySeconds: 20
          #  periodSeconds: 5
      volumes:
      - name: config
        configMap:
          name: zigbee2mqtt-config
      - name: usb-zigbee
        hostPath:
          path: /dev/ttyUSB0
          type: CharDevice
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: manual
      resources:
        requests:
          storage: 50Mi
